@@ -14,7 +14,7 @@ AUX_DIST_GEN =				\
 
 MAINTAINERCLEANFILES =  $(AUX_DIST_GEN)
 
-docdir=$(prefix)/share/doc/@PACKAGE@
+docdir=$(prefix)/share/doc/@PACKAGE@-@VERSION@
 SUBDIRS = doc data src ICONS VisualC8
 EXTRA_DIST = prboom.spec.in prboom.spec config.h bootstrap $(AUX_DIST_GEN)
 doc_DATA = README COPYING AUTHORS NEWS
