@@ -8,7 +8,7 @@ Source: ftp://prdownloads.sourceforge.net/prboom/@PACKAGE@-@VERSION@.tar.gz
 URL: http://prboom.sourceforge.net/
 Group: Amusements/Games
 BuildRoot: /var/tmp/%{doomname}-buildroot
-Copyright: GPL
+License: GPL
 Packager: Colin Phipps <doom@cph.demon.co.uk>
 Prefix: %{_prefix}
 Autoreq: 0
@@ -28,20 +28,7 @@ rm -rf $RPM_BUILD_ROOT
 %setup -q
 
 %build
-./configure --disable-cpu-opt \
- 	--prefix=/usr \
-	--exec-prefix=/usr \
-	--bindir=/usr/bin \
-	--sbindir=/usr/sbin \
-	--sysconfdir=/etc \
-	--datadir=/usr/share \
-	--includedir=/usr/include \
-	--libdir=/usr/lib \
-	--libexecdir=/usr/lib \
-	--localstatedir=/var/lib \
-	--sharedstatedir=/usr/com \
-	--mandir=/usr/share/man \
-	--infodir=/usr/share/info
+./configure --disable-cpu-opt --prefix=/usr
 make
 
 %install
@@ -51,17 +38,10 @@ make
 rm -rf $RPM_BUILD_ROOT
 
 %files
-%doc %{_mandir}/man5/*
-%doc %{_mandir}/man6/*
-%doc NEWS
-%doc AUTHORS
-%doc README
-%doc COPYING
-%doc doc/README.compat
-%doc doc/README.demos
-%doc doc/MBF.txt
-%doc doc/MBFFAQ.txt
-%doc doc/boom.txt
-/usr/games/*
+%{_mandir}/man5
+%{_mandir}/man6
+%docdir %{_docdir}
+%{_docdir}
+/usr/games
 %{_datadir}/games/doom/prboom.wad
 
